# compile-time-init-build

./: .gitignore  meson.build
docs/: intro.adoc
subprojects/: cpp-baremetal-concurrency.wrap  fmt.wrap
